Name:          incremental-computing
Version:       1.0.0.0
Cabal-Version: >= 1.16
Build-Type:    Simple
License:       BSD3
License-File:  LICENSE
Copyright:     © 2014–2017 Denis Firsov; © 2014–2017 Wolfgang Jeltsch
Author:        Wolfgang Jeltsch
Maintainer:    wolfgang-it@jeltsch.info
Stability:     provisional
Homepage:      http://hackage.haskell.org/package/incremental-computing
Package-URL:   http://hackage.haskell.org/package/incremental-computing-1.0.0.0/incremental-computing-1.0.0.0.tar.gz
Synopsis:      Incremental computing
Description:   This package is about incremental computing.
Category:      Data
Tested-With:   GHC == 8.0.1

Source-Repository head

    Type:     darcs
    Location: http://hub.darcs.net/jeltsch/incremental-computing

Source-Repository this

    Type:     darcs
    Location: http://hub.darcs.net/jeltsch/incremental-computing
    Tag:      incremental-computing-1.0.0.0

Library

    Build-Depends: base >= 3.0 && < 5

    Default-Language: Haskell2010

    Default-Extensions:

    Exposed-Modules:
